--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "babel-register": "^6.14.0",
+    "codecov": "^1.0.0",
     "esdoc": "^0.4.0",
     "expect.js": "^0.3.1",
     "mocha": "^2.3.4",
     "mocha-jsdom": "^1.1.0",
     "nyc": "^8.3.0",
     "sinon": "^1.17.4",
-    "standard": "^5.4.1",
-    "codecov": "^1.0.0"
+    "standard": "^5.4.1"
   },
   "dependencies": {
     "babel-cli": "^6.3.17",
