--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "babel-cli": "^6.3.17",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
     "colors": "^1.1.2",
     "glob": "^7.1.0",
@@ -71,6 +73,10 @@
     "sourceMaps": "inline",
     "presets": [
       "es2015"
+    ],
+    "plugins": [
+      "transform-es3-member-expression-literals",
+      "transform-es3-property-literals"
     ],
     "env": {
       "test": {
