--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
     "colors": "^1.1.2",
+    "commander": "^2.9.0",
     "glob": "^7.1.0",
     "rollup": "^0.36.1",
     "rollup-plugin-babel": "^2.6.1",
