--- a/package.json
+++ b/package.json
@@ -76,7 +76,12 @@
       "es2015"
     ],
     "plugins": [
-      ["transform-es2015-modules-commonjs", {"loose": true}],
+      [
+        "transform-es2015-modules-commonjs",
+        {
+          "loose": true
+        }
+      ],
       "transform-es3-member-expression-literals",
       "transform-es3-property-literals"
     ],
