--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "jsnext:main": "src/index.es6",
   "scripts": {
-    "test": "nyc mocha --timeout 5000 --recursive --compilers js:babel-register test/**/*.es6 test/*.es6",
+    "test": "nyc mocha --timeout 5000 --recursive test/**/*.es6 test/*.es6",
     "lcov_report": "nyc report --reporter=lcov",
     "coverage": "npm run lcov_report && codecov",
     "babel": "babel src --out-dir . && chmod +x server.js",
-    "standard": "standard src/*.es6 test/*.es6",
+    "lint": "eslint src/*.es6 test/*.es6",
+    "lint:fix": "eslint --fix src/*.es6 test/*.es6",
     "esdoc": "esdoc -c esdoc.json",
     "install": "npm run babel",
     "prepublish": "npm run babel",
@@ -35,22 +36,29 @@
   "author": "Cédric Néhémie <cedric.nehemie@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
-    "babel-register": "^6.14.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.3",
+    "@babel/preset-env": "^7.4.2",
+    "babel-eslint": "^10.0.0",
     "codecov": "^1.0.0",
-    "esdoc": "^0.4.0",
+    "esdoc": "^1.1.0",
+    "eslint": "^4.12.1",
+    "eslint-config": "^0.3.0",
+    "eslint-config-fbjs": "^1.1.1",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-prefer-object-spread": "^1.1.0",
+    "eslint-plugin-react": "^5.2.2",
     "expect.js": "^0.3.1",
-    "mocha": "^3.1.0",
-    "mocha-jsdom": "^1.1.0",
+    "fbjs": "^0.8.6",
+    "mocha": "^6.0.2",
+    "mocha-jsdom": "^2.0.0",
     "nyc": "^8.3.0",
     "sinon": "^1.17.4",
     "standard": "^5.4.1"
   },
   "dependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
-    "babel-plugin-transform-es3-property-literals": "^6.8.0",
-    "babel-preset-es2015": "^6.3.13",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "glob": "^7.1.0",
@@ -59,21 +67,12 @@
     "rollup-plugin-commonjs": "^5.0.4",
     "rollup-plugin-includepaths": "^0.1.6",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "widjet-utils": "^0.3.0"
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "it",
-      "describe",
-      "beforeEach",
-      "afterEach"
-    ]
+    "widjet-utils": "^1.0.0"
   },
   "babel": {
     "sourceMaps": "inline",
     "presets": [
-      "es2015"
+      "@babel/preset-env"
     ],
     "plugins": [
       [
