--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:fix": "eslint --fix src/*.es6 test/*.es6",
     "esdoc": "esdoc -c esdoc.json",
     "install": "npm run babel",
-    "prepublish": "npm run babel",
+    "prepublishOnly": "npm run babel",
     "start": "npm run babel && node ./server.js test/**/*.es6"
   },
   "keywords": [
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.3",
+    "@babel/register": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "babel-eslint": "^10.0.0",
     "codecov": "^1.0.0",
@@ -100,7 +101,7 @@
       ".es6"
     ],
     "require": [
-      "babel-register"
+      "@babel/register"
     ]
   }
 }
