--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "bin": {
     "widjet-test-server": "./server.js"
   },
-  "jsnext:main": "src/index.es6",
+  "jsnext:main": "src/index.js",
   "scripts": {
-    "test": "nyc mocha --timeout 5000 --recursive test/**/*.es6 test/*.es6",
+    "test": "nyc mocha --timeout 5000 --recursive test/**/*.js test/*.js",
     "lcov_report": "nyc report --reporter=lcov",
     "coverage": "npm run lcov_report && codecov",
     "babel": "babel src --out-dir . && chmod +x server.js",
-    "lint": "eslint src/*.es6 test/*.es6",
-    "lint:fix": "eslint --fix src/*.es6 test/*.es6",
+    "lint": "eslint src/*.js test/*.js",
+    "lint:fix": "eslint --fix src/*.js test/*.js",
     "esdoc": "esdoc -c esdoc.json",
     "prepublishOnly": "npm run babel",
-    "start": "npm run babel && node ./server.js test/**/*.es6"
+    "start": "npm run babel && node ./server.js test/**/*.js"
   },
   "keywords": [
     "widgets",
